--- a/db.properties
+++ b/db.properties
@@ -2,3 +2,4 @@ user=developer
 password=12345
 dburl=jdbc:mysql://localhost:3306/coursejdbc
 useSSL=false
+# dburl=jdbc:mysql://localhost:3306/locadora
